test/unit/fixtures/syntax-error/index.js
var tessel = require('tessel');
var other = require('./arrow');
tessel.led[2].on();
